# omniventory

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_zh.md  docker-compose.dev.yml  docker-compose.yml  openapi.json
backend/: pyproject.toml
backend/alembic/versions/: 0004_create_locations_table.py  0005_create_categories_table.py  0006_create_item_kinds_table.py  0007_create_item_definitions_table.py  0008_create_stock_instances_and_bridge.py  0010_add_stock_tracking_to_item_definitions.py  0012_alter_stock_instances_ledger_wiring.py  0013_add_default_best_before_days_to_item_definitions.py  0014_add_best_before_date_to_stock_instances.py  0020_create_media_files_table.py  (+12 more)
backend/app/: config.py  main.py  scheduler.py
backend/scripts/: export_openapi.py
backend/tests/: test_m1_5_step1.py  test_m1_5_step2.py  test_m1_followup_container_label.py  test_m1_followup_delete_integrity.py  test_m1_step1.py  test_m1_step2.py  test_m1_step3.py  test_m1_step4.py  test_m2_step1.py  test_m2_step2.py  test_m2_step3.py  test_m2_step4.py  test_m2_step5.py  test_m3_step1.py  test_m3_step2.py  test_m3_step3.py  test_m3_step4.py  test_m4_step1.py  test_m4_step10.py  test_m4_step2.py  test_m4_step3.py  test_m4_step4.py  test_m4_step5.py  test_m4_step6.py  test_m4_step7.py  test_m4_step8.py  test_m4_step9.py  test_m4_walkthrough_fix4.py  test_m5_step1.py  test_m5_step2.py  test_m5_step3.py  test_m5_step4.py  test_m5_step5.py  test_m5_step6.py  test_m5_step7.py  test_m6_step1.py  test_m6_step2.py  test_m6_step3.py  test_m6_step4.py  test_m6_step5.py  (+8 more)
(+239 files in other folders)
