[project]
name = "omniventory"
version = "0.1.0"
description = "Self-hosted three-in-one inventory system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "argon2-cffi>=23.1",
    "apscheduler>=3.11.2",
    "paho-mqtt>=2.1.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    # B008: FastAPI's Depends() in function signatures is the canonical pattern;
    # this rule generates false positives for all FastAPI dependency injection.
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
